2018-04-22  Bruno Haible  <bruno@clisp.org>

	Assume a git checkout instead of a hg checkout.
	* Makefile.devel (GIT): New variable.
	(HG): Remove variable.
	(gnulib-imported, tag-release): Use GIT instead of HG.

2018-04-08  Bruno Haible  <bruno@clisp.org>

	Fix possible build failure on some Linux/powerpc machines.
	Reported by Johannes Hielscher <jhielscher@posteo.de>.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_END) [UNIX_LINUX && POWERPC]:
	Shrink.

2018-02-24  Bruno Haible  <bruno@clisp.org>

	Fix memory map related warnings on Alpine Linux 3.7/i386.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*) [UNIX_LINUX && I80386]: Shrink,
	to avoid the address ranges used on Alpine Linux.

2018-02-24  Bruno Haible  <bruno@clisp.org>

	Fix memory map related warnings on Alpine Linux 3.7/x86_64.
	Reported by Nelson Beebe.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*) [UNIX_LINUX && AMD64]: Shrink,
	to avoid the address ranges used on Alpine Linux.

2018-02-24  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode with musl libc.
	* spvw_mmap.d (mincore_pageinfo_t): Change to 'unsigned char' on all
	Linux platforms.

2018-02-19  Sam Steingold  <sds@gnu.org>

	* constobj.d (lisp_implementation_version_built_string): No need
	for "#ifdef __DATE__", it is widely supported.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Bump version number.
	* version.sh: Bump version number to 2.49.93+.
	* version.h, src/configure: Regenerated.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Avoid "warning: command substitution: ignored null byte in input".
	Reported by Nelson Beebe.
	* m4/bold.m4 (RSE_BOLD): For vt100, remove trailing NUL bytes. Only
	physical terminals need these NULs; physical terminals are not in use
	any more nowadays.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Improve installation documentation.
	Reported by Nelson Beebe.
	* DEPENDENCIES: State which libsigsegv version to use on IRIX.
