@@ -1,5 +1,5 @@
 All you need to know when hacking (modifying) GNU clisp or when building
-it off the hg (mercurial) repository.
+it off the git repository.
 
 
 Requirements
