@@ -2,12 +2,12 @@
 .\"     Title: clisp
 .\"    Author: Bruno Haible <\m[blue]\fB\%http://www.haible.de/bruno/\fR\m[]>
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: Last modified: 2017-05-30
+.\"      Date: Last modified: 2018-04-22
 .\"    Manual: Platform: @PLATFORM@
 .\"    Source: CLISP 2.49.50+
 .\"  Language: English
 .\"
-.TH "CLISP" "1" "Last modified: 2017\-05\-30" "CLISP 2.49.50+" "Platform: @PLATFORM@"
+.TH "CLISP" "1" "Last modified: 2018\-04\-22" "CLISP 2.49.50+" "Platform: @PLATFORM@"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -1289,8 +1289,8 @@ version (on
 Where did you get the sources or binaries? When? (Absolute dates, e\&.g\&.,
 \(lq2006\-01\-17\(rq, are preferred over the relative ones, e\&.g\&.,
 \(lq2 days ago\(rq\&. If you are using
-\m[blue]\fBMercurial\fR\m[]\&\s-2\u[63]\d\s+2, please supply the output of
-\fBhg id\fR)\&.
+\m[blue]\fBGit\fR\m[]\&\s-2\u[63]\d\s+2, please supply the output of
+\fBgit rev-list --max-count=1 HEAD\fR)\&.
 .RE
 .sp
 .RS 4
