@@ -120,6 +120,7 @@
 <!ENTITY bash '&gnu; <ulink url="http://www.gnu.org/software/bash/">bash</ulink>'>
 <!ENTITY cvs '<ulink url="http://www.cvshome.org">CVS</ulink>'>
 <!ENTITY hg '<ulink url="https://www.mercurial-scm.org/">Mercurial</ulink>'>
+<!ENTITY git '<ulink url="https://git-scm.com/">Git</ulink>'>
 <!ENTITY asdf '<ulink url="http://common-lisp.net/project/asdf/"><function>asdf</function></ulink>'>
 <!ENTITY defsystem '<ulink url="http://www.cliki.net/mk-defsystem"><function>defsystem</function></ulink>'>
 <!ENTITY gpl '<ulink url="http://www.gnu.org/copyleft/gpl.html">GPL</ulink>'>
