@@ -3612,13 +3612,13 @@ if [ $CROSS = false ] ; then
     echol
   fi
 
-  # have .hg + developer with a network connection => check id-href.map
+  # have .git + developer with a network connection => check id-href.map
   # Try wget, lynx, curl in order. wget is common, but MacOS X only has curl.
   # use beta pages for the latest id-href.map
   # NB: keep in sync with doc/Makefile:DIST
   MYIMPROOT=http://clisp.org/beta/impnotes/
   MYTESTURL=${MYIMPROOT}id-href.map
-  if test -d "${SRCTOPDIR_}.hg" \
+  if test -d "${SRCTOPDIR_}.git" \
      && { if wget --version >/dev/null 2>/dev/null ; then \
             wget --execute netrc=off --tries=1 --timeout=10 -q ${MYTESTURL}; \
           elif lynx --version >/dev/null 2>/dev/null ; then \
